# UBB

1st_semester/ASC/lab/: lab 1 part 2.asm  lab 1 part 2.lst  lab 1 part 2.txt  lab 1 part 3.asm  lab 1 part 3.lst  lab1 part 4.asm  lab1 part 4.lst  lab1 part 5 .asm  lab1 part 5 .lst  lab1.lst  test carry flag.asm  test carry flag.lst
1st_semester/ASC/lab 3/: lab_3_temapart1.asm  lab_3_temapart1.lst  lab_3_temapart2.asm  lab_3_temapart2.lst  lab_3_temapart3.asm  lab_3_temapart3.lst  lab_3_temapart4.asm  lab_3_temapart4.lst
1st_semester/ASC/lab 4/: lab4_1.asm  lab4_1.lst  lab4_2.asm  lab4_2.lst
1st_semester/ASC/lab 5/: lab5tema.asm  lab5tema.lst
1st_semester/ASC/lab 6/: lab6_15.asm  lab6_15.lst  lab6_exemplu.asm
1st_semester/ASC/lab11/: functii.asm  functii.lst  temasupl_lab11.asm  temasupl_lab11.lst
1st_semester/ASC/lab12turculetz/: asmWord.lst  main.c  modulAsm.asm  modulAsm.lst  testfunctie_separat.asm  testfunctie_separat.lst
1st_semester/ASC/lab8/: lab8_1.asm  lab8_1.lst  lab8_2.asm  lab8_2.lst  lab8_3.asm  lab8_3.lst  lab8_4.asm  lab8_4.lst  vocile.txt  vocile2.txt
1st_semester/ASC/probapractic/: practic.asm  practic.lst
1st_semester/FP/: practicfp.rar
1st_semester/FP/lab1/: problema 2.py  problema1.py  problema3.py
1st_semester/FP/lab13/: main.py  main2.py  main3.py  tests.py
1st_semester/FP/lab2/: tema-problema6.py  tema_problema9.py
1st_semester/FP/lab3/: Documentatie LAB3.docx  tema_aplicatie4si9.py  tema_cufunctieadaugata.py
1st_semester/FP/lab4-6/: Adaugare.py  Cautari.py  Filtrare.py  Rapoarte.py  Stergere.py  documentatie lab4-6.docx  functionalities.PY  main.py  tests.py
1st_semester/FP/lab4-6 - lista de dictionare/: documentatie lab4-6.docx  tests.py
1st_semester/FP/lab7-9 TURCULET/: main.py
1st_semester/FP/lab7-9 fara fisiere/: documentation.docx  (+1 more)
1st_semester/modul pedagogic/: Proiect mentorat Sorin-Nicolae Turculet Grupa 217.docx  Proiect mentorat-Moisa Clementina-Ioana 214.docx
2nd_Semester/grafuri/05_lab/04_laborator/: 3.out  4.out  5.out  CMakeLists.txt  problema1.cpp  problema2.cpp  problema3.cpp  problema4.cpp  problema5.cpp
2nd_Semester/modul pedag/: Vision board-sorin.docx  floarea-dimensiunile pedagogiei-turculet-bolog.pptx
2nd_Semester/oop/Lab5_EDUARD - Copy(before undo)2/: CMakeLists.txt  CodeReviewLAB5.odt  Source.c  Teste.h
2nd_Semester/oop/Lab5_EDUARD - Copy(before undo)2/Lab3/x64/Debug/Lab3.tlog/: Cl.items.tlog
2nd_Semester/oop/Lab5_EDUARD - Copy(before undo)2/domain/: domain.c  domain.h
2nd_Semester/oop/Lab5_EDUARD - Copy(before undo)2/list/: listamea.c  listamea.h
2nd_Semester/oop/lab6-2iteratie/: CMakeLists.txt  Domain.cpp  Domain.h  Repository.cpp  Repository.h  Service.cpp  Service.h  UI.cpp  UI.h  Untitled Diagram (2).drawio  main.cpp  validator.h  vector.cpp  vector.h
2nd_Semester/oop/lab8/: CMakeLists.txt  Diagrama.drawio  Domain.cpp  Domain.h  RepoLab.cpp  RepoLab.h  Repository.cpp  Repository.h  Service.cpp  Service.h  date.txt  main.cpp  testrepo.txt
2nd_Semester/sda/lab01-Matrice condensata/: CMakeLists.txt
2nd_Semester/sda/lab01-Matrice condensata/Proiect C++/: App.cpp  Matrice.cpp  Matrice.h
2nd_Semester/sda/lab01-Matrice condensata/Teste/: TestExtins.cpp  TestScurt.cpp
2nd_Semester/sda/lab03-TAD Dictionar LSI/: CMakeLists.txt
2nd_Semester/sda/lab03-TAD Dictionar LSI/Proiect C++/: App.cpp  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h
2nd_Semester/sda/lab03-TAD Dictionar LSI/Teste/: TestExtins.cpp  TestExtins.h  TestScurt.cpp
2nd_Semester/sda/lab06-TAD Dictionar Ordonat -liste intrepatrunse/: CMakeLists.txt
2nd_Semester/sda/lab06-TAD Dictionar Ordonat -liste intrepatrunse/Proiect C++/: App.cpp  DO.cpp  DO.h  Iterator.cpp  Iterator.h
2nd_Semester/sda/lab06-TAD Dictionar Ordonat -liste intrepatrunse/Teste/: TestExtins.cpp  TestScurt.cpp
2nd_Semester/sda/lab08-TAD Arbore binar- inlanturi pe tablou/: CMakeLists.txt
2nd_Semester/sda/lab08-TAD Arbore binar- inlanturi pe tablou/Proiect C++/: AB.cpp  AB.h  App.cpp  IteratorAB.cpp  IteratorAB.h
2nd_Semester/sda/lab08-TAD Arbore binar- inlanturi pe tablou/Teste/: TestExtins.cpp  TestScurt.cpp
(+382 files in other folders)
