cmake_minimum_required(VERSION 3.28)
project(04_laborator)

set(CMAKE_CXX_STANDARD 14)

add_executable(04_laborator problema1.cpp)
add_executable(04_laborator2 problema2.cpp)
add_executable(04_laborator3 problema3.cpp)
add_executable(04_laborator4 problema4.cpp)
add_executable(04_laborator5 problema5.cpp)
